fix(controller): DocumentRequest
DocumentRequest with no files validation added

Author: Jayr_Gil